--- a/style.css
+++ b/style.css
@@ -767,7 +767,7 @@ vertical-align: middle;
             -moz-border-radius: 6px 6px 6px 6px;
             -webkit-border-radius: 0px 0x 0px 0px;
             border: 2px solid #36bd66 ;
-            font-family: &#39;Lucida Sansfont&#39;, &#39;Lucida Sans Regular&#39;, &#39;Lucida Grande&#39;, &#39;Lucida Sans Unicode&#39;, Geneva, Verdana, sans-serif;
+            font-family: 'Lucida Sansfont', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             border-radius: 10px;
         }
 
@@ -783,7 +783,7 @@ vertical-align: middle;
             -moz-border-radius: 6px 6px 6px 6px;
             -webkit-border-radius: 0px 0x 0px 0px;
             border: 1px solid white ;
-            font-family: &#39;Lucida Sansfont&#39;, &#39;Lucida Sans Regular&#39;, &#39;Lucida Grande&#39;, &#39;Lucida Sans Unicode&#39;, Geneva, Verdana, sans-serif;
+            font-family: 'Lucida Sansfont', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             border-radius: 10px;
         }
       
@@ -800,7 +800,7 @@ vertical-align: middle;
             -moz-border-radius: 6px 6px 6px 6px;
             -webkit-border-radius: 0px 0x 0px 0px;
             border: 1px solid white ;
-            font-family: &#39;Lucida Sansfont&#39;, &#39;Lucida Sans Regular&#39;, &#39;Lucida Grande&#39;, &#39;Lucida Sans Unicode&#39;, Geneva, Verdana, sans-serif;
+            font-family: 'Lucida Sansfont', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             border-radius: 10px;
         }
       
@@ -826,7 +826,7 @@ vertical-align: middle;
             -moz-border-radius: 6px 6px 6px 6px;
             -webkit-border-radius: 0px 0x 0px 0px;
             border: 2px solid #246d0b ;
-            font-family: &#39;Lucida Sansfont&#39;, &#39;Lucida Sans Regular&#39;, &#39;Lucida Grande&#39;, &#39;Lucida Sans Unicode&#39;, Geneva, Verdana, sans-serif;
+            font-family: 'Lucida Sansfont', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             border-radius: 10px;
         }
       
@@ -844,7 +844,7 @@ vertical-align: middle;
             -moz-border-radius: 6px 6px 6px 6px;
             -webkit-border-radius: 0px 0x 0px 0px;
             border: 2px solid #d36832 ;
-            font-family: &#39;Lucida Sansfont&#39;, &#39;Lucida Sans Regular&#39;, &#39;Lucida Grande&#39;, &#39;Lucida Sans Unicode&#39;, Geneva, Verdana, sans-serif;
+            font-family: 'Lucida Sansfont', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             border-radius: 10px;
         }
        
@@ -860,7 +860,7 @@ vertical-align: middle;
             -moz-border-radius: 6px 6px 6px 6px;
             -webkit-border-radius: 0px 0x 0px 0px;
             border: 2px solid #138f3e ;
-            font-family: &#39;Lucida Sansfont&#39;, &#39;Lucida Sans Regular&#39;, &#39;Lucida Grande&#39;, &#39;Lucida Sans Unicode&#39;, Geneva, Verdana, sans-serif;
+            font-family: 'Lucida Sansfont', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             border-radius: 10px;
         }
 
@@ -876,7 +876,7 @@ vertical-align: middle;
             -moz-border-radius: 6px 6px 6px 6px;
             -webkit-border-radius: 0px 0x 0px 0px;
             border: 2px solid #236c75 ;
-            font-family: &#39;Lucida Sansfont&#39;, &#39;Lucida Sans Regular&#39;, &#39;Lucida Grande&#39;, &#39;Lucida Sans Unicode&#39;, Geneva, Verdana, sans-serif;
+            font-family: 'Lucida Sansfont', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             border-radius: 10px;
         }
 
@@ -893,7 +893,7 @@ vertical-align: middle;
             -moz-border-radius: 6px 6px 6px 6px;
             -webkit-border-radius: 0px 0x 0px 0px;
             border: 2px solid #d9452d ;
-            font-family: &#39;Lucida Sansfont&#39;, &#39;Lucida Sans Regular&#39;, &#39;Lucida Grande&#39;, &#39;Lucida Sans Unicode&#39;, Geneva, Verdana, sans-serif;
+            font-family: 'Lucida Sansfont', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             border-radius: 10px;
         }
 
@@ -1215,7 +1215,7 @@ font-weight:bold;
             -moz-border-radius: 6px 6px 6px 6px;
             -webkit-border-radius: 0px 0x 0px 0px;
             border: 2px solid #4be3d5;
-            font-family: &#39;Lucida Sans&#39;, &#39;Lucida Sans Regular&#39;, &#39;Lucida Grande&#39;, &#39;Lucida Sans Unicode&#39;, Geneva, Verdana, sans-serif;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             border-radius: 10px;
       }
       
@@ -1231,7 +1231,7 @@ font-weight:bold;
             -moz-border-radius: 6px 6px 6px 6px;
             -webkit-border-radius: 0px 0x 0px 0px;
             border: 1px solid white;
-            font-family: &#39;Lucida Sans&#39;, &#39;Lucida Sans Regular&#39;, &#39;Lucida Grande&#39;, &#39;Lucida Sans Unicode&#39;, Geneva, Verdana, sans-serif;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             border-radius: 10px;
       }
       
@@ -1276,7 +1276,7 @@ font-weight:bold;
         a {
             color: #ffffff;
             text-decoration: none;
-            font-family: &#39;Lucida Sans&#39;, &#39;Lucida Sans Regular&#39;, &#39;Lucida Grande&#39;, &#39;Lucida Sans Unicode&#39;, Geneva, Verdana, sans-serif;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
     
       
